Sistema funcional con base de cofasa

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultWin": "Server=192.168.1.2\\CATALANA;Database=CORE_CATALANA;User Id=sa;Password=$$catalana;TrustServerCertificate=True",
-    "LocalProd": "Data Source=localhost;Initial Catalog=CORE_CATALANA;User Id=sa;Password=StrongPa$$w0rd15;TrustServerCertificate=True"
+    "DefaultWin": "Server=192.168.1.2\\CONTABLE;Database=CORE_CONTABLE;User Id=sa;Password=$$CONTABLE;TrustServerCertificate=True",
+    "LocalProd": "Data Source=localhost;Initial Catalog=CORE_CONTABLE;User Id=sa;Password=StrongPa$$w0rd15;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +10,7 @@
     }
   },
   "Variables": {
-    "DbSchema": "CATALANA.",
+    "DbSchema": "CONTABLE.",
     "RotativaDriver": "../Rotativa/Windows"
   },
   "ADA": "$2a$11$2G44vN49tJP9cjZHI6TKAewyZJanGk0/DrSjnqsaK6SJ92aVusBGW",
