--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultWin": "Server=LAPTOP-3V0FFV3V;Database=CORE_CATALANA_081024;Integrated Security=True;TrustServerCertificate=True",
-    "DefaultUnix": "Server=.;Database=CORE_CATALANA_081024;User Id=sa;Password=VeryStr0ngP@ssw0rd;TrustServerCertificate=True"
+    "DefaultWin": "Server=LAPTOP-3V0FFV3V;Database=CORE_CONTABLE;Integrated Security=True;TrustServerCertificate=True",
+    "DefaultUnix": "Server=.;Database=CORE_CONTABLE;User Id=sa;Password=VeryStr0ngP@ssw0rd;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +10,7 @@
     }
   },
   "Variables": {
-    "DbSchema": "CATALANA.",
+    "DbSchema": "CONTABLE.",
     "RotativaDriver": "../Rotativa/Windows"
   },
   "ADA": "$2a$11$HBcRFS0qTgJxdyrPe8gg0.IS/WJeJP1Br5Nit.wgzDlndhlKLsaPW",
