--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "./Logs/catalana-log-.txt",
+          "path": "./Logs/CONTABLE-log-.txt",
           "rollingInterval": "Day",
           "restrictedToMinimumLevel": "Information",
           "retainedFileCountLimit": 7
