--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultWin": "Server=192.168.1.2\\CONTABLE;Database=CORE_CONTABLE;User Id=sa;Password=$$CONTABLE;TrustServerCertificate=True",
+    "DefaultWin": "Server=WIN-GGBFOOA4CSO;Database=CORE_CONTABLE;User Id=sa;Password=Capuchino2003.;TrustServerCertificate=True",
     "LocalProd": "Data Source=localhost;Initial Catalog=CORE_CONTABLE;User Id=sa;Password=StrongPa$$w0rd15;TrustServerCertificate=True"
   },
   "Logging": {
